Fix T72862: Viewport Render doesn't render Grease Pencil Overlays, Shading

Fix by @campbellbarton