source/blender/draw/engines/gpencil/gpencil_engine.c
@@ -439,7 +439,7 @@ void GPENCIL_cache_init(void *vedata)
       stl->storage->is_main_onion = false;
     }
     /* save render state */
-    stl->storage->is_render = DRW_state_is_image_render();
+    stl->storage->is_render = DRW_state_is_scene_render();
     stl->storage->is_mat_preview = (bool)stl->storage->is_render &&
                                    STREQ(scene->id.name + 2, "preview");
 
